--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -83,6 +83,8 @@
   --circle-size: calc(3 * var(--header-font-size));
 
   /* TODO(cjamcl) clean up unused variables. */
+  --circle-size-big: 120px;
+  --circle-size: 96px;
   --color-black-100: #F5F5F5;
   --color-black-200: #E0E0E0;
   --color-black-400: #BDBDBD;
@@ -99,18 +101,21 @@
   --color-red: #FF4E42;
   --color-white: #FFFFFF;
   --header-padding: 20px 0 20px 0;
+  --icon-size: 24px;
   --score-container-padding: 12px;
   --score-container-width: 160px;
   --score-number-font-size-big: 42px;
   --score-number-font-size: 34px;
-  --circle-size-big: 120px;
-  --circle-size: 96px;
   --score-title-font-size-big: 28px;
   --score-title-font-size: 20px;
   --score-title-line-height-big: 36px;
   --score-title-line-height: 26px;
   --section-padding: 40px;
+  --topbar-bg: var(--color-black-100);
+  --topbar-height: 32px;
   --topbar-padding: 0 8px;
+
+  --logo-url: url('data:image/svg+xml;utf8,<svg height=192px version=1.1 viewBox="0 0 192 192"width=192px xmlns=http://www.w3.org/2000/svg xmlns:xlink=http://www.w3.org/1999/xlink><title>symbol_1_black</title><g id=symbol_1_black fill=none fill-rule=evenodd stroke=none stroke-width=1><g id=Group><g><rect height=192 id=Rectangle width=192 x=0 y=0></rect><path d="M67.7054588,179.352453 L70.3079591,158.532451 L119.643145,142.141282 L124.294541,179.352453 C115.41478,182.365787 105.898235,184 96,184 C86.1017646,184 76.5852201,182.365787 67.7054588,179.352453 L67.7054588,179.352453 Z M52.439998,172.48 C25.8942826,157.328 8,128.753717 8,96 C8,47.398942 47.398942,8 96,8 C144.601058,8 184,47.398942 184,96 C184,128.753717 166.105717,157.328 139.560002,172.48 L130,96 L136,96 L136,80 L128,80 L128,48 L96,28 L64,48 L64,80 L56,80 L56,96 L62,96 L52.4399988,172.48001 L52.439998,172.48 Z M113.875485,96 L116.756843,119.050869 L73.439198,133.48254 L78.1245155,96 L113.875485,96 Z M80,80 L80,56.8679623 L96,46.8679623 L112,56.8679623 L112,80 L80,80 Z"fill=#000000 id=Shape></path></g></g></g></svg>');
 
   --pass-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>check</title><path fill="%23178239" d="M24 4C12.95 4 4 12.95 4 24c0 11.04 8.95 20 20 20 11.04 0 20-8.96 20-20 0-11.05-8.96-20-20-20zm-4 30L10 24l2.83-2.83L20 28.34l15.17-15.17L38 16 20 34z"/></svg>');
   --average-icon-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>info</title><path fill="%23E67700" d="M24 4C12.95 4 4 12.95 4 24s8.95 20 20 20 20-8.95 20-20S35.05 4 24 4zm2 30h-4V22h4v12zm0-16h-4v-4h4v4z"/></svg>');
@@ -143,6 +148,7 @@
     --circle-size-big: 96px;
     --circle-size: 72px;
     --header-padding: 16px 0 16px 0;
+    --icon-size: 20px;
     --score-container-padding: 8px;
     --score-container-width: 112px;
     --score-number-font-size-big: 34px;
